#27134 #29757 Fix: Points should be aligned.
Reviewed by: Radoslaw Maziarka

--- a/src/wwwroot/styles/base/_global.scss
+++ b/src/wwwroot/styles/base/_global.scss
@@ -77,6 +77,11 @@ ol {
   padding-left: 20px;
 }
 
+.list-view {
+  list-style-position: inside;
+  padding-left: 0;
+}
+
 .page-header {
   margin: 20px 0;
   padding-bottom: 5px;
